# OpenVVC

./: Makefile.am  configure.ac
CI/: ovnreg
examples/: Makefile.am  dectest.c  ovrate.c  ovremuxer.c
libovvc/: Makefile.am  cabac_internal.h  ctudec.c  ctudec.h  dec_init.c  dec_structures.h  dpb.c  drv.h  drv_affine_mvp.c  drv_ibc.c  drv_intra.c  drv_lfnst.c  drv_lines.c  drv_mvp.c  drv_utils.h  fg_blend_stripe.asm  hls_structures.h  libopenvvc.pc.in  mempool.c  mvpool.c  nvcl.c  nvcl.h  nvcl_nal_aps.c  nvcl_nal_ph.c  nvcl_nal_pps.c  nvcl_nal_sei.c  nvcl_nal_sps.c  nvcl_nal_vps.c  nvcl_rpl.c  nvcl_structures.h  nvcl_utils.h  ovdec.c  ovdec.h  ovdefs.h  ovdmx.c  ovdpb.h  overror.c  ovframe.c  ovframe.h  ovframepool.c  (+45 more)
libovvc/arm/: Makefile.am  rcn_alf_sse.c  rcn_dequant_neon_wrapper.c  rcn_intra_dc_planar_neon_wrapper.c  rcn_neon.h  rcn_sao_neon.S  rcn_sao_neon_wrapper.c  rcn_sao_sse.c  rcn_transform_neon.S
libovvc/x86/: Makefile.am  fg_blend_stripe.h  fg_compute_block_avg.asm  rcn_alf_avx2.c  rcn_alf_sse.c  rcn_df_sse.c  rcn_dmvr_avx2.c  rcn_dmvr_sse.c  rcn_intra_angular_avx2.c  rcn_intra_angular_sse.c  rcn_intra_dc_planar_sse.c  rcn_intra_mip_avx2.c  rcn_intra_mip_sse.c  rcn_lfnst_sse.c  rcn_mc_avx2.c  rcn_mc_sse.c  rcn_prof_bdof_sse.c  rcn_sao_sse.c  rcn_transform_sse.c
